objects/JBCXM__SuccessPlanTemplate__c.object
<CustomObject>
    <fields>
        <fullName>JBCXM__EntityType__c</fullName>
        <label>EntityType</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__Objective__c</fullName>
        <label>Objective</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Template</label>
        <referenceTo>JBCXM__SuccessPlanTemplate__c</referenceTo>
        <relationshipLabel>ParentTemplate</relationshipLabel>
        <relationshipName>ParentTemplate</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__Playbook__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Playbook</label>
        <referenceTo>JBCXM__Playbook__c</referenceTo>
        <relationshipLabel>SPTemplatePlaybook</relationshipLabel>
        <relationshipName>SPTemplatePlaybook</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__RelationshipType__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Relationship Type</label>
        <referenceTo>JBCXM__GSRelationshipType__c</referenceTo>
        <relationshipLabel>Success Plan Template Relationship Type</relationshipLabel>
        <relationshipName>SPTemplateRelationshipType</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__SuccessPlan__c</fullName>
        <label>Success Plan</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__Tasks__c</fullName>
        <label>Tasks</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Success Plan Template</label>
    <listViews>
        <fullName>JBCXM__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Success Plan Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>